# WebAuditMCP

./: .env.example  .env.test.example  .gitignore  CHANGELOG.md  GLOBAL_RULES.md  PLANNING.md  README.md  STATUS_REPORT.md  TASK.md  package.json  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
mcp/: __init__.py  server.py
mcp/tools/: __init__.py  auth_helper.py  axe_playwright.py  cdp_gateway.py  credentials.py  lighthouse.py  lighthouse_fast.py  quick_audit.py  report_merge.py  responsive.py  security_headers.py  url_check.py  wave.py  wave_api.py  webhint.py  zap.py  zap_simple.py
node-tools/: axe-playwright.js  package.json  responsive.js  security-headers.js  vitest.config.js
node-tools/tests/: axe.spec.js  responsive.spec.js  security-headers.spec.js
prompts/: README.md  complete-audit.md
prompts/accessibility/: wcag-compliance.md
prompts/development/: localhost-audit.md
prompts/performance/: core-web-vitals.md
prompts/security/: headers-audit.md  vulnerabilities.md
prompts/styles-layouts/: color-contrast.md
prompts/visual/: responsive-design.md
scripts/: apply-corrections.ps1  check-server.ps1  check_dependencies.py  chrome-mcp-helper.ps1  dev_checks.sh  docker-start.ps1  fix-wave.ps1  mcp-health-check.ps1  quick-start.ps1  quick-start.sh  run_e2e.py  setup-test-credentials.ps1  start-local.ps1  test_mcp_client.py  test_mcp_connection.py
tests/: __init__.py  test_tools_smoke.py
